2002-10-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: implement %p.
	* include/stdio.h: document %p.

2002-10-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am: add hooks for libprintf_*.a.
	* libc/stdio/Makefile.am: ditto.
	* libc/stdio/vfprintf.c: add printf levels.

2002-10-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in libc/Makefile.am: wire stdio
		into the infrastructure.
	* include/stdio.h: new file.
	* libc/stdio/Makefile.am: new file.
	* libc/stdio/fclose.c: new file.
	* libc/stdio/fdevopen.c: new file.
	* libc/stdio/fprintf.c: new file.
	* libc/stdio/fprintf_p.c: new file.
	* libc/stdio/fputc.c: new file.
	* libc/stdio/printf.c: new file.
	* libc/stdio/printf_p.c: new file.
	* libc/stdio/snprintf.c: new file.
	* libc/stdio/snprintf_p.c: new file.
	* libc/stdio/sprintf.c: new file.
	* libc/stdio/sprintf_p.c: new file.
	* libc/stdio/stdio_private.h: new file.
	* libc/stdio/vfprintf.c: new file.

2002-10-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: fix rand() & Co.
	* libc/stdlib/rand.c: fix rand() & Co.
	* libc/stdlib/random.c: New file.

2002-10-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/ina90.h include/avr/pgmspace.h:
		Move __LPM & Co from ina90.h to pgmspace.h

2002-10-13  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in: Added docs subpackage for user manual.
		Dropped avr-gcc version to 3.2.75 to allow snapshots.
	* configure.in: Bumped version and made it rpm compatible.
	* doc/Makefile.am (EXTRA_DIST): Removed register-usage.txt.
	* doc/TODO: Updated.

2002-10-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/calloc.c: new file.
	* include/stdlib.h libc/stdlib/Makefile.am: add calloc().

2002-10-11  Theodore A. Roth  <troth@openavr.org>

	* include/errno.h: Add dox.
	* include/stdlib.h: Add xref to errno.

2002-10-11  Theodore A. Roth  <troth@openavr.org>

	* doc/api/main_page.dox: Updated.

2002-10-11  Theodore A. Roth  <troth@openavr.org>
